fixing teaching on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ a:hover{
     width: 85%;
     max-width: 900pt;
     margin-left: 5%;
-    line-height: 2.5;
+    line-height: 1.5;
     color: var(--color-default);
     }
 
